Fix markers test and list scrollbar

--- a/src/src/components/Editors/styles.scss
+++ b/src/src/components/Editors/styles.scss
@@ -69,7 +69,7 @@
   display: flex;
   flex-direction: column;
   width: 250px;
-  padding: 85px 5px 0;
+  padding: 85px 0 0;
 
   .rule-item-button {
     display: flex;
